--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,7 @@
 services:
+
+###### Caddy Proxy Docker
+
   caddy:
     image: lucaslorentz/caddy-docker-proxy:ci-alpine
     ports:
@@ -13,7 +16,9 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - caddy_data:/data
     restart: unless-stopped
-    
+
+###### Exemplo Labels
+
   page:
     image: tonanuvem/fiap_page
     networks:
@@ -22,6 +27,19 @@ services:
       caddy: page.vm.aluno.lab.tonanuvem.com
       caddy.reverse_proxy: "{{upstreams 80}}"
 
+###### Caddy Manager
+
+    caddy-ui:
+      image: qmcgaw/caddy-ui
+      ports:
+        - 8880:8000/tcp
+      environment:
+        - CADDY_API_ENDPOINT=http://caddy:2019
+    networks:
+      - caddymanager
+    restart: unless-stopped
+      
+###### Caddy Manager
 
   # MongoDB database for persistent storage
   mongodb:
