--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,16 @@ services:
       - 80:80
       - 443:443/tcp
       - 443:443/udp
+      - 2019:2019/tcp
     environment:
+      - CADDY_ADMIN=0.0.0.0:2019
       - CADDY_INGRESS_NETWORKS=caddymanager
     networks:
       - caddymanager
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - caddy_data:/data
+      - caddy_config:/config
     restart: unless-stopped
 
 ###### Exemplo Labels
@@ -105,4 +108,5 @@ networks:
 
 volumes:
   mongodb_data:
-  caddy_data: {}
+  caddy_data:
+  caddy_config:
