--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,8 @@ services:
     labels:
       caddy: page.fiapaws2.aluno.lab.tonanuvem.com
       caddy.reverse_proxy: "{{upstreams 80}}"
-      caddy_ingress_network: "caddy_caddymanager"
+      caddy_ingress_network: caddy_caddymanager
+      caddy.header: Access-Control-Allow-Origin *
 
 ###### Caddy UI
 
