--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     networks:
       - caddymanager
     labels:
-      caddy: page.fiapaws2.aluno.lab.tonanuvem.com
+      caddy: fiapaws2.aluno.lab.tonanuvem.com
       caddy.reverse_proxy: "{{upstreams 80}}"
       caddy_ingress_network: caddy_caddymanager
       caddy.header: Access-Control-Allow-Origin *
